--- a/contact.htm
+++ b/contact.htm
@@ -9,7 +9,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=windows-1255">
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
-	<title>יצירת קשר</title>
+	<title>ֳ©ֳ¶ֳ©ֳ¸ֳ÷ ֳ·ֳ¹ֳ¸</title>
 </head>
 <body>
 <script>
@@ -26,42 +26,42 @@
 	<div class="main">
 		<div class="header">
 			<div class="title">
-				<h1>אוריקולותרפיה</h1>
+				<h1>׳׳•׳¨׳™׳§׳•׳׳•׳×׳¨׳₪׳™׳”</h1>
 			</div>
 		</div>
 		<div class="sidenav">
-			<h2>ניווט באתר</h2>
+			<h2>ֳ°ֳ©ֳ¥ֳ¥ֳ¨ ֳ¡ֳ ֳ÷ֳ¸</h2>
 			<ul>
-    			<li><a href="index">אוריקולותרפיה</a></li>
-                <li><a href="treatment">כיצד מטפלים</a></li>
-                <li><a href="history">סקירה היסטורית</a></li>
-                <li><a href="diseases">מחלות הניתנות לטיפול</a></li>
-                <li><a href="pictures">תמונות</a></li>
-                <li><a href="contact">יצירת קשר</a></li>
+    			<li><a href="index">ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</a></li>
+                <li><a href="treatment">ֳ«ֳ©ֳ¶ֳ£ ֳ®ֳ¨ֳ´ֳ¬ֳ©ֳ­</a></li>
+                <li><a href="history">ֳ±ֳ·ֳ©ֳ¸ֳ₪ ֳ₪ֳ©ֳ±ֳ¨ֳ¥ֳ¸ֳ©ֳ÷</a></li>
+                <li><a href="diseases">ֳ®ֳ§ֳ¬ֳ¥ֳ÷ ֳ₪ֳ°ֳ©ֳ÷ֳ°ֳ¥ֳ÷ ֳ¬ֳ¨ֳ©ֳ´ֳ¥ֳ¬</a></li>
+                <li><a href="pictures">ֳ÷ֳ®ֳ¥ֳ°ֳ¥ֳ÷</a></li>
+                <li><a href="contact">ֳ©ֳ¶ֳ©ֳ¸ֳ÷ ֳ·ֳ¹ֳ¸</a></li>
 			</ul>
 
-			<h2>יצירת קשר</h2>
+			<h2>ֳ©ֳ¶ֳ©ֳ¸ֳ÷ ֳ·ֳ¹ֳ¸</h2>
 				<p>
 					<table cellspacing="0" cellpadding="0"><tr><td>
-					המקובלים 5 הרצליה, 46447 
-<br>טלפון: 09-9503273, 09-9552045 
-<br>אימייל: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</a>					</td></tr></table>
+					ֳ₪ֳ®ֳ·ֳ¥ֳ¡ֳ¬ֳ©ֳ­ 5 ֳ₪ֳ¸ֳ¶ֳ¬ֳ©ֳ₪, 46447 
+<br>ֳ¨ֳ¬ֳ´ֳ¥ֳ¯: 09-9503273, 09-9552045 
+<br>ֳ ֳ©ֳ®ֳ©ֳ©ֳ¬: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</a>					</td></tr></table>
 				</p>
 
 		</div>
 		<div class="content">
 			<div class="item">
-				<h1 class="h1">יצירת קשר</h1>
+				<h1 class="h1">ֳ©ֳ¶ֳ©ֳ¸ֳ÷ ֳ·ֳ¹ֳ¸</h1>
 
-<table cellspacing="0" cellpadding="0"><tr><td><DIV><DIV><U><B>ד"ר קלוד קאהן</B> </U><BR>מומחה באוריקולותרפיה <BR>מומחה למחלות ילדים</DIV><DIV> </DIV><DIV>המקובלים 5 הרצליה, 46447 <BR>טלפון: 09-9503273, 09-9552045 <BR>אימייל: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</A></DIV></DIV></DIV></td></tr></table>
+<table cellspacing="0" cellpadding="0"><tr><td><DIV><DIV><U><B>ֳ£"ֳ¸ ֳ·ֳ¬ֳ¥ֳ£ ֳ·ֳ ֳ₪ֳ¯</B> </U><BR>ֳ®ֳ¥ֳ®ֳ§ֳ₪ ֳ¡ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪ <BR>ֳ®ֳ¥ֳ®ֳ§ֳ₪ ֳ¬ֳ®ֳ§ֳ¬ֳ¥ֳ÷ ֳ©ֳ¬ֳ£ֳ©ֳ­</DIV><DIV> </DIV><DIV>ֳ₪ֳ®ֳ·ֳ¥ֳ¡ֳ¬ֳ©ֳ­ 5 ֳ₪ֳ¸ֳ¶ֳ¬ֳ©ֳ₪, 46447 <BR>ֳ¨ֳ¬ֳ´ֳ¥ֳ¯: 09-9503273, 09-9552045 <BR>ֳ ֳ©ֳ®ֳ©ֳ©ֳ¬: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</A></DIV></DIV></DIV></td></tr></table>
 
 			</div>
 		</div>
 		<div class="clearer"></div>
 	</div>
 	<div class="footer">
-		<span class="left">הוקם ע"י <a href="http://www.יניב.co.il">יניב דוידוביץ</a></span>
-		<span class="right">כל הזכויות שמורות <a href="http://www.auriculo.co.il">אוריקולותרפיה</a></span>
+		<span class="left">ֳ₪ֳ¥ֳ·ֳ­ ֳ²"ֳ© <a href="http://www.ֳ©ֳ°ֳ©ֳ¡.co.il">ֳ©ֳ°ֳ©ֳ¡ ֳ£ֳ¥ֳ©ֳ£ֳ¥ֳ¡ֳ©ֳµ</a></span>
+		<span class="right">ֳ«ֳ¬ ֳ₪ֳ¦ֳ«ֳ¥ֳ©ֳ¥ֳ÷ ֳ¹ֳ®ֳ¥ֳ¸ֳ¥ֳ÷ <a href="http://www.auriculo.co.il">ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</a></span>
 		<div class="clearer"></div>
 	</div>
 </div>
