--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=windows-1255">
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
-	<title>אוריקולותרפיה</title>
+	<title>ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</title>
 </head>
 <body>
 <script>
@@ -25,47 +25,47 @@
 	<div class="main">
 		<div class="header">
 			<div class="title">
-				<h1>אוריקולותרפיה</h1>
+				<h1>׳׳•׳¨׳™׳§׳•׳׳•׳×׳¨׳₪׳™׳”</h1>
 			</div>
 		</div>
 		<div class="sidenav">
-			<h2>ניווט באתר</h2>
+			<h2>ֳ°ֳ©ֳ¥ֳ¥ֳ¨ ֳ¡ֳ ֳ÷ֳ¸</h2>
 			<ul>
-    			<li><a href="index">אוריקולותרפיה</a></li>
-                <li><a href="treatment">כיצד מטפלים</a></li>
-                <li><a href="history">סקירה היסטורית</a></li>
-                <li><a href="diseases">מחלות הניתנות לטיפול</a></li>
-                <li><a href="pictures">תמונות</a></li>
-                <li><a href="contact">יצירת קשר</a></li>
+    			<li><a href="index">ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</a></li>
+                <li><a href="treatment">ֳ«ֳ©ֳ¶ֳ£ ֳ®ֳ¨ֳ´ֳ¬ֳ©ֳ­</a></li>
+                <li><a href="history">ֳ±ֳ·ֳ©ֳ¸ֳ₪ ֳ₪ֳ©ֳ±ֳ¨ֳ¥ֳ¸ֳ©ֳ÷</a></li>
+                <li><a href="diseases">ֳ®ֳ§ֳ¬ֳ¥ֳ÷ ֳ₪ֳ°ֳ©ֳ÷ֳ°ֳ¥ֳ÷ ֳ¬ֳ¨ֳ©ֳ´ֳ¥ֳ¬</a></li>
+                <li><a href="pictures">ֳ÷ֳ®ֳ¥ֳ°ֳ¥ֳ÷</a></li>
+                <li><a href="contact">ֳ©ֳ¶ֳ©ֳ¸ֳ÷ ֳ·ֳ¹ֳ¸</a></li>
 			</ul>
 
-			<h2>יצירת קשר</h2>
+			<h2>ֳ©ֳ¶ֳ©ֳ¸ֳ÷ ֳ·ֳ¹ֳ¸</h2>
 				<p>
 					<table cellspacing="0" cellpadding="0"><tr><td>
-					המקובלים 5 הרצליה, 46447 
-<br>טלפון: 09-9503273, 09-9552045 
-<br>אימייל: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</a>					</td></tr></table>
+					ֳ₪ֳ®ֳ·ֳ¥ֳ¡ֳ¬ֳ©ֳ­ 5 ֳ₪ֳ¸ֳ¶ֳ¬ֳ©ֳ₪, 46447 
+<br>ֳ¨ֳ¬ֳ´ֳ¥ֳ¯: 09-9503273, 09-9552045 
+<br>ֳ ֳ©ֳ®ֳ©ֳ©ֳ¬: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</a>					</td></tr></table>
 				</p>
 
 		</div>
 		<div class="content">
 			<div class="item">
-				<h1 class="h1">אוריקולותרפיה</h1>
+				<h1 class="h1">ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</h1>
 
-<table cellspacing="0" cellpadding="0"><tr><td><table cellspacing="0" cellpadding="0"><tbody><tr><td><div class="descr" dir="rtl"><font size="2">נכתב ע"י </font><a href="http://auriculo.co.il/contact"><font size="2">ד"ר קלוד קאהן</font></a> <font size="2">- <b><u>מומחה באוריקולותרפיה</u> </b>ומומחה למחלות ילדים</font></div>
-<h3>מהי אוריקולותרפיה? </h3>האוריקולותרפיה היא אקופונקטורה (דיקור) באוזן החיצונית לטיפול בבעיות פיזיות ונפשיות שונות. 
+<table cellspacing="0" cellpadding="0"><tr><td><table cellspacing="0" cellpadding="0"><tbody><tr><td><div class="descr" dir="rtl"><font size="2">ֳ°ֳ«ֳ÷ֳ¡ ֳ²"ֳ© </font><a href="http://auriculo.co.il/contact"><font size="2">ֳ£"ֳ¸ ֳ·ֳ¬ֳ¥ֳ£ ֳ·ֳ ֳ₪ֳ¯</font></a> <font size="2">- <b><u>ֳ®ֳ¥ֳ®ֳ§ֳ₪ ֳ¡ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</u> </b>ֳ¥ֳ®ֳ¥ֳ®ֳ§ֳ₪ ֳ¬ֳ®ֳ§ֳ¬ֳ¥ֳ÷ ֳ©ֳ¬ֳ£ֳ©ֳ­</font></div>
+<h3>ֳ®ֳ₪ֳ© ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪? </h3>ֳ₪ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪ ֳ₪ֳ©ֳ  ֳ ֳ·ֳ¥ֳ´ֳ¥ֳ°ֳ·ֳ¨ֳ¥ֳ¸ֳ₪ (ֳ£ֳ©ֳ·ֳ¥ֳ¸) ֳ¡ֳ ֳ¥ֳ¦ֳ¯ ֳ₪ֳ§ֳ©ֳ¶ֳ¥ֳ°ֳ©ֳ÷ ֳ¬ֳ¨ֳ©ֳ´ֳ¥ֳ¬ ֳ¡ֳ¡ֳ²ֳ©ֳ¥ֳ÷ ֳ´ֳ©ֳ¦ֳ©ֳ¥ֳ÷ ֳ¥ֳ°ֳ´ֳ¹ֳ©ֳ¥ֳ÷ ֳ¹ֳ¥ֳ°ֳ¥ֳ÷. 
 <br>&nbsp; 
 <br>
-<h3>הקדמה </h3>האוריקולותרפיה שייכת למשפחת הרפלקסולוגיה, אך בשונה מרפלקסולוגיה קלאסית, היא מסוגלת לטפל במגוון רחב יותר של בעיות רפואיות. הטיפול האוריקולותרפי עושה שימוש באוזניים החיצוניות כ"מקלדת" של "מחשב", כשהמחשב הוא בעצם המוח. (David Alimi) 
-<br>כל הבעיות הרפואיות רשומות בשני חלקי המוח ובאוזניים החיצוניות. 
+<h3>ֳ₪ֳ·ֳ£ֳ®ֳ₪ </h3>ֳ₪ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪ ֳ¹ֳ©ֳ©ֳ«ֳ÷ ֳ¬ֳ®ֳ¹ֳ´ֳ§ֳ÷ ֳ₪ֳ¸ֳ´ֳ¬ֳ·ֳ±ֳ¥ֳ¬ֳ¥ֳ¢ֳ©ֳ₪, ֳ ֳ× ֳ¡ֳ¹ֳ¥ֳ°ֳ₪ ֳ®ֳ¸ֳ´ֳ¬ֳ·ֳ±ֳ¥ֳ¬ֳ¥ֳ¢ֳ©ֳ₪ ֳ·ֳ¬ֳ ֳ±ֳ©ֳ÷, ֳ₪ֳ©ֳ  ֳ®ֳ±ֳ¥ֳ¢ֳ¬ֳ÷ ֳ¬ֳ¨ֳ´ֳ¬ ֳ¡ֳ®ֳ¢ֳ¥ֳ¥ֳ¯ ֳ¸ֳ§ֳ¡ ֳ©ֳ¥ֳ÷ֳ¸ ֳ¹ֳ¬ ֳ¡ֳ²ֳ©ֳ¥ֳ÷ ֳ¸ֳ´ֳ¥ֳ ֳ©ֳ¥ֳ÷. ֳ₪ֳ¨ֳ©ֳ´ֳ¥ֳ¬ ֳ₪ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ© ֳ²ֳ¥ֳ¹ֳ₪ ֳ¹ֳ©ֳ®ֳ¥ֳ¹ ֳ¡ֳ ֳ¥ֳ¦ֳ°ֳ©ֳ©ֳ­ ֳ₪ֳ§ֳ©ֳ¶ֳ¥ֳ°ֳ©ֳ¥ֳ÷ ֳ«"ֳ®ֳ·ֳ¬ֳ£ֳ÷" ֳ¹ֳ¬ "ֳ®ֳ§ֳ¹ֳ¡", ֳ«ֳ¹ֳ₪ֳ®ֳ§ֳ¹ֳ¡ ֳ₪ֳ¥ֳ  ֳ¡ֳ²ֳ¶ֳ­ ֳ₪ֳ®ֳ¥ֳ§. (David Alimi) 
+<br>ֳ«ֳ¬ ֳ₪ֳ¡ֳ²ֳ©ֳ¥ֳ÷ ֳ₪ֳ¸ֳ´ֳ¥ֳ ֳ©ֳ¥ֳ÷ ֳ¸ֳ¹ֳ¥ֳ®ֳ¥ֳ÷ ֳ¡ֳ¹ֳ°ֳ© ֳ§ֳ¬ֳ·ֳ© ֳ₪ֳ®ֳ¥ֳ§ ֳ¥ֳ¡ֳ ֳ¥ֳ¦ֳ°ֳ©ֳ©ֳ­ ֳ₪ֳ§ֳ©ֳ¶ֳ¥ֳ°ֳ©ֳ¥ֳ÷. 
 <br>&nbsp; 
-<br>במחקר שבוצע בשנת 2002 על ידי דוד אלימי, בדקו בבדיקת MRI שבנגיעה באגודל ובדיקור באוזן באזור האחראי על האגודל, נרשמה תוצאה זהה. מחקר זה שהינו הראשון בעולם בתחומו, מוכיח את "מפת האוזן". מפת האוזן: מפת האוזן הינה מיפוי הגוף בנקודות הלחץ באוזן. 
+<br>ֳ¡ֳ®ֳ§ֳ·ֳ¸ ֳ¹ֳ¡ֳ¥ֳ¶ֳ² ֳ¡ֳ¹ֳ°ֳ÷ 2002 ֳ²ֳ¬ ֳ©ֳ£ֳ© ֳ£ֳ¥ֳ£ ֳ ֳ¬ֳ©ֳ®ֳ©, ֳ¡ֳ£ֳ·ֳ¥ ֳ¡ֳ¡ֳ£ֳ©ֳ·ֳ÷ MRI ֳ¹ֳ¡ֳ°ֳ¢ֳ©ֳ²ֳ₪ ֳ¡ֳ ֳ¢ֳ¥ֳ£ֳ¬ ֳ¥ֳ¡ֳ£ֳ©ֳ·ֳ¥ֳ¸ ֳ¡ֳ ֳ¥ֳ¦ֳ¯ ֳ¡ֳ ֳ¦ֳ¥ֳ¸ ֳ₪ֳ ֳ§ֳ¸ֳ ֳ© ֳ²ֳ¬ ֳ₪ֳ ֳ¢ֳ¥ֳ£ֳ¬, ֳ°ֳ¸ֳ¹ֳ®ֳ₪ ֳ÷ֳ¥ֳ¶ֳ ֳ₪ ֳ¦ֳ₪ֳ₪. ֳ®ֳ§ֳ·ֳ¸ ֳ¦ֳ₪ ֳ¹ֳ₪ֳ©ֳ°ֳ¥ ֳ₪ֳ¸ֳ ֳ¹ֳ¥ֳ¯ ֳ¡ֳ²ֳ¥ֳ¬ֳ­ ֳ¡ֳ÷ֳ§ֳ¥ֳ®ֳ¥, ֳ®ֳ¥ֳ«ֳ©ֳ§ ֳ ֳ÷ "ֳ®ֳ´ֳ÷ ֳ₪ֳ ֳ¥ֳ¦ֳ¯". ֳ®ֳ´ֳ÷ ֳ₪ֳ ֳ¥ֳ¦ֳ¯: ֳ®ֳ´ֳ÷ ֳ₪ֳ ֳ¥ֳ¦ֳ¯ ֳ₪ֳ©ֳ°ֳ₪ ֳ®ֳ©ֳ´ֳ¥ֳ© ֳ₪ֳ¢ֳ¥ֳ³ ֳ¡ֳ°ֳ·ֳ¥ֳ£ֳ¥ֳ÷ ֳ₪ֳ¬ֳ§ֳµ ֳ¡ֳ ֳ¥ֳ¦ֳ¯. 
 <br>&nbsp; 
-<br>האוריקולותרפיה מטפלת במחלות פנימיות, הורמונליות, בעיות עיכול, מערכת השתן, נשימה, גיל מעבר, עמוד שדרה, בעיות נפשיות ועוד <a href="http://auriculo.co.il/diseases">מחלות רבות</a>. 
+<br>ֳ₪ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪ ֳ®ֳ¨ֳ´ֳ¬ֳ÷ ֳ¡ֳ®ֳ§ֳ¬ֳ¥ֳ÷ ֳ´ֳ°ֳ©ֳ®ֳ©ֳ¥ֳ÷, ֳ₪ֳ¥ֳ¸ֳ®ֳ¥ֳ°ֳ¬ֳ©ֳ¥ֳ÷, ֳ¡ֳ²ֳ©ֳ¥ֳ÷ ֳ²ֳ©ֳ«ֳ¥ֳ¬, ֳ®ֳ²ֳ¸ֳ«ֳ÷ ֳ₪ֳ¹ֳ÷ֳ¯, ֳ°ֳ¹ֳ©ֳ®ֳ₪, ֳ¢ֳ©ֳ¬ ֳ®ֳ²ֳ¡ֳ¸, ֳ²ֳ®ֳ¥ֳ£ ֳ¹ֳ£ֳ¸ֳ₪, ֳ¡ֳ²ֳ©ֳ¥ֳ÷ ֳ°ֳ´ֳ¹ֳ©ֳ¥ֳ÷ ֳ¥ֳ²ֳ¥ֳ£ <a href="http://auriculo.co.il/diseases">ֳ®ֳ§ֳ¬ֳ¥ֳ÷ ֳ¸ֳ¡ֳ¥ֳ÷</a>. 
 <br>&nbsp; 
-<br><u>האוריקולותרפיה זכתה להכרה מלאה בשנת 1987 על ידי ארגון הבריאות העולמי. </u>
+<br><u>ֳ₪ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪ ֳ¦ֳ«ֳ÷ֳ₪ ֳ¬ֳ₪ֳ«ֳ¸ֳ₪ ֳ®ֳ¬ֳ ֳ₪ ֳ¡ֳ¹ֳ°ֳ÷ 1987 ֳ²ֳ¬ ֳ©ֳ£ֳ© ֳ ֳ¸ֳ¢ֳ¥ֳ¯ ֳ₪ֳ¡ֳ¸ֳ©ֳ ֳ¥ֳ÷ ֳ₪ֳ²ֳ¥ֳ¬ֳ®ֳ©. </u>
 <br>&nbsp; 
-<br><img class="empty" title="כיצד מטפלים באוריקולוטרפיה" alt="כיצד מטפלים באוריקולוטרפיה" src="http://www.auriculo.co.il/img/arrow.bmp"> קרא <a href="http://auriculo.co.il/treatment">כיצד מטפלים באוריקולותרפיה</a>.
+<br><img class="empty" title="ֳ«ֳ©ֳ¶ֳ£ ֳ®ֳ¨ֳ´ֳ¬ֳ©ֳ­ ֳ¡ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ¨ֳ¸ֳ´ֳ©ֳ₪" alt="ֳ«ֳ©ֳ¶ֳ£ ֳ®ֳ¨ֳ´ֳ¬ֳ©ֳ­ ֳ¡ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ¨ֳ¸ֳ´ֳ©ֳ₪" src="http://www.auriculo.co.il/img/arrow.bmp"> ֳ·ֳ¸ֳ  <a href="http://auriculo.co.il/treatment">ֳ«ֳ©ֳ¶ֳ£ ֳ®ֳ¨ֳ´ֳ¬ֳ©ֳ­ ֳ¡ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</a>.
 <div></div>
 <div></div></td></tr></tbody></table></td></tr></table>
 
@@ -74,8 +74,8 @@
 		<div class="clearer"></div>
 	</div>
 	<div class="footer">
-		<span class="left">הוקם ע"י <a href="http://www.יניב.co.il">יניב דוידוביץ</a></span>
-		<span class="right">כל הזכויות שמורות <a href="http://www.auriculo.co.il">אוריקולותרפיה</a></span>
+		<span class="left">ֳ₪ֳ¥ֳ·ֳ­ ֳ²"ֳ© <a href="http://www.ֳ©ֳ°ֳ©ֳ¡.co.il">ֳ©ֳ°ֳ©ֳ¡ ֳ£ֳ¥ֳ©ֳ£ֳ¥ֳ¡ֳ©ֳµ</a></span>
+		<span class="right">ֳ«ֳ¬ ֳ₪ֳ¦ֳ«ֳ¥ֳ©ֳ¥ֳ÷ ֳ¹ֳ®ֳ¥ֳ¸ֳ¥ֳ÷ <a href="http://www.auriculo.co.il">ֳ ֳ¥ֳ¸ֳ©ֳ·ֳ¥ֳ¬ֳ¥ֳ÷ֳ¸ֳ´ֳ©ֳ₪</a></span>
 		<div class="clearer"></div>
 	</div>
 </div>
