--- a/contact.htm
+++ b/contact.htm
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   "http://www.w3.org/TR/html4/loose.dtd">
 <html dir="rtl">
@@ -9,7 +10,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=windows-1255">
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen">
-	<title>éöéøú ÷ùø</title>
+	<title>יצירת קשר</title>
 </head>
 <body>
 <script>
@@ -30,38 +31,38 @@
 			</div>
 		</div>
 		<div class="sidenav">
-			<h2>ðéååè áàúø</h2>
+			<h2>ניווט באתר</h2>
 			<ul>
-    			<li><a href="index">àåøé÷åìåúøôéä</a></li>
-                <li><a href="treatment">ëéöã îèôìéí</a></li>
-                <li><a href="history">ñ÷éøä äéñèåøéú</a></li>
-                <li><a href="diseases">îçìåú äðéúðåú ìèéôåì</a></li>
-                <li><a href="pictures">úîåðåú</a></li>
-                <li><a href="contact">éöéøú ÷ùø</a></li>
+    			<li><a href="index">אוריקולותרפיה</a></li>
+                <li><a href="treatment">כיצד מטפלים</a></li>
+                <li><a href="history">סקירה היסטורית</a></li>
+                <li><a href="diseases">מחלות הניתנות לטיפול</a></li>
+                <li><a href="pictures">תמונות</a></li>
+                <li><a href="contact">יצירת קשר</a></li>
 			</ul>
 
-			<h2>éöéøú ÷ùø</h2>
+			<h2>יצירת קשר</h2>
 				<p>
 					<table cellspacing="0" cellpadding="0"><tr><td>
-					äî÷åáìéí 5 äøöìéä, 46447 
-<br>èìôåï: 09-9503273, 09-9552045 
-<br>àéîééì: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</a>					</td></tr></table>
+					המקובלים 5 הרצליה, 46447 
+<br>טלפון: 09-9503273, 09-9552045 
+<br>אימייל: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</a>					</td></tr></table>
 				</p>
 
 		</div>
 		<div class="content">
 			<div class="item">
-				<h1 class="h1">éöéøú ÷ùø</h1>
+				<h1 class="h1">יצירת קשר</h1>
 
-<table cellspacing="0" cellpadding="0"><tr><td><DIV><DIV><U><B>ã"ø ÷ìåã ÷àäï</B> </U><BR>îåîçä áàåøé÷åìåúøôéä <BR>îåîçä ìîçìåú éìãéí</DIV><DIV> </DIV><DIV>äî÷åáìéí 5 äøöìéä, 46447 <BR>èìôåï: 09-9503273, 09-9552045 <BR>àéîééì: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</A></DIV></DIV></DIV></td></tr></table>
+<table cellspacing="0" cellpadding="0"><tr><td><DIV><DIV><U><B>ד"ר קלוד קאהן</B> </U><BR>מומחה באוריקולותרפיה <BR>מומחה למחלות ילדים</DIV><DIV> </DIV><DIV>המקובלים 5 הרצליה, 46447 <BR>טלפון: 09-9503273, 09-9552045 <BR>אימייל: <a href="mailto:kahncmail-med@yahoo.com" target="_blank">kahncmail-med@yahoo.com</A></DIV></DIV></DIV></td></tr></table>
 
 			</div>
 		</div>
 		<div class="clearer"></div>
 	</div>
 	<div class="footer">
-		<span class="left">äå÷í ò"é <a href="http://www.éðéá.co.il">éðéá ãåéãåáéõ</a></span>
-		<span class="right">ëì äæëåéåú ùîåøåú <a href="http://www.auriculo.co.il">àåøé÷åìåúøôéä</a></span>
+		<span class="left">הוקם ע"י <a href="http://www.יניב.co.il">יניב דוידוביץ</a></span>
+		<span class="right">כל הזכויות שמורות <a href="http://www.auriculo.co.il">אוריקולותרפיה</a></span>
 		<div class="clearer"></div>
 	</div>
 </div>
